2010-12-21  Jian Li  <jianli@chromium.org>

Reviewed by Darin Adler.

        Fix bug 51366: REGRESSION (r66452): Form data no longer contains
        'Content-Type' header for files with unrecognized extensions
        https://bugs.webkit.org/show_bug.cgi?id=51366

        Test: http/tests/local/formdata/form-data-with-unknown-file-extension.html

        * platform/network/FormData.cpp:
        (WebCore::FormData::appendKeyValuePairItems):
2010-12-21  Jian Li  <jianli@chromium.org>

        Reviewed by Darin Adler.

        Fix bug 51366: REGRESSION (r66452): Form data no longer contains
        'Content-Type' header for files with unrecognized extensions
        https://bugs.webkit.org/show_bug.cgi?id=51366

        * http/tests/local/formdata/form-data-with-unknown-file-extension-expected.txt: Added.
        * http/tests/local/formdata/form-data-with-unknown-file-extension.html: Added.
        * http/tests/local/resources/file.invalid: Added.


Canonical link: https://commits.webkit.org/64769@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@74427 268f45cc-cd09-0410-ab3c-d52691b4dbfc